# oc-genblog

./: Cargo.toml  README.md
samples/: politics-are-overrated.md
src/: lib.rs  main.rs
templates/: blog-post.html
