[package]
name = "oc-genblog"
version = "0.1.0"
authors = ["Your Name <over.codes@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
pulldown-cmark = "0.7.1"
tera = "1.5"
regex = "1"
lazy_static = "1.4.0"
log = "0.4"
env_logger = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"